[package]
name = "uboat"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
structopt = "0.3.14"
heck = "0.3.1"


[dev-dependencies]
trybuild = "1.0.28"
